data/all_generated_tests/raw_wast_tests/nop_IncorrectBranchTargetResolution_77.wast
;; 8. **Combination of `nop` and Trap Handling:**    - **Description**: Place `nop` in sequences where incorrect `br` targets should cause traps. Ensure that no unintended traps occur due to `nop`.    - **Constraint Checked**: Ensures `nop` does not affect the control flow leading to unintended trap invocations.    - **Relation to Incorrect Branch Target Resolution**: Ensures no traps are introduced by incorrect branching due to `nop`.

(assert_invalid
  (module
    (func $checkTrap
      (block $label
        (nop)
        (br 1)  ;; Incorrect branch target which should cause a trap
      )
    )
  )
  "unknown label"
)